nlw/share/skin/s3/css/screen.css
/* ... */
table.widgetUserPrefs td.widgetUserPrefsButtons {
    text-align: center;
    padding-top: 5px;
}

#st-tags-field {
    width: 70%;
}

#st-tags-listing a.tag_name {
    display: block;
    padding-top: 2px;
    float: left;
    max-width: 90%;
    clear: left;
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

div.pagination-container {
    margin: 0 auto;
    width: 43em;
    font-weight: bold;
}

div.pagination-container .paging-back {
    min-width: 15em;
    text-align: right;
    float: left;
}
div.pagination-container .paging-numbers {
    min-width: 13em;
    text-align: center;
    float: left;
}
div.pagination-container .paging-forward {
    min-width: 15em;
    text-align: left;
    float: left;
}

#statistics-attribution {
    white-space: nowrap;
}


/* See {bz: 1597}. If we have initial hint text some day, it should be gray. */
body div#globalNav div input.searchText {
        color: black;
}

.collapsed {
    display: none;
}

#st-edit-mode-container #controlsRight {
    max-width: 64px !important;
}

.table-options {
    width: 100%;
}

.table-options td {
}

.table-options .options {
}

.row.options {
}

.column.options {
}

.row-col-label {
    vertical-align: middle !important;
    text-align: right;
    width: 50%;
}

.table-create input {
    padding-top: -5px;
}

.table-create .error, .table-options .error {
    display: block;
    color: #FF0000;
    margin-bottom: 0px;
}

.table-create, .table-options .buttons {
    margin-top: 5px;
}

.table-create .cancel {
    text-align: right;
}
.table-create .header {
    font-weight: bold;
    font-size: larger;
    padding-bottom: 10px;
}

.col-number, .row-number {
    font-weight: bold;
    font-size: larger;
    text-align: right;
}

.row-col-label {
    font-weight: bold;
}

.row-col-label.two {
    padding-bottom: 5px;
}

#st-create-content-lightbox #choose-page-spreadsheet, #st-create-content-lightbox #create-options {
    width: 400px;
    padding-left: 64px;
}

#st-create-content-lightbox #choose-page-spreadsheet .choice {
    width: 200px;
    border-style: solid;
    float: left;
}

#st-create-content-lightbox #template-option {
    padding: 0px 0px 0px 8px;
    margin: 8px 0px 0px 24px;
    border-style: solid;
    border-color: gray;
    border-width: 0px 0px 0px 8px;
    float: left;
}

/* fix some buttons with too large hotspots in ie6 start */

* html a.editButton, * html ul li a.commentButton, * html a.saveButton, 
* html ul li a.previewButton, * html a.cancelButton, * html ul li a.compareButton, * html ul li a.addContentButton {
	line-height: 22px;
}
/* fix some buttons with too large hotspots in ie6 end */

/* Capitalize all guess_real_name fields in People: {bz: 1784} */
.realName {
    text-transform: capitalize;
}

.other_buttons, .table_buttons { }

.table_buttons.disabled {
    opacity: 0.3;
}

#st-edit-mode-container {
    position: fixed;
    width: 90%;
}

#st-edit-mode-container.expanded {
    position: absolute;
    top:0;
    left:0;
    width:100%;
    height:100%;
}

/* toolbar refactor */
#st-page-editing-button-toolbar {
    width: 20em;
    float: right;
}

#st-page-editing-toolbar {
    margin-right: 20em;
}

#st-page-editing-widget-menu {
    float: left;
    width: 60px;
}

#wikiwyg_toolbar .other_buttons,
#wikiwyg_toolbar .table_buttons {
    float: left;
}
#st-edit-mode-toolbar {
    clear: both;
    margin-top: 5px;
}

